--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ iced = {version = "0.13", features = ["markdown", "highlighter"]}
 open = "5.3"
 rfd = "0.15.1"
 uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
+wry = "0.47.2"
