--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ dirs = "5.0.1"
 iced = { version = "0.13", features = ["markdown", "highlighter"] }
 open = "5.3"
 rfd = "0.15.1"
+serde = { version = "1.0.215", features = ["derive"] }
+toml = "0.8.19"
 uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
 wry = "0.47.2"
